creación del logo

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Document</title>
 </head>
 <body class="body">
+    <header class="logo">
+        <a href="/" aria-current="page">
+            <img class="logo-image" src="images/spotifu-logo.png" width="112" height="32" alt="Logo de Spotifu">
+        </a>
+    </header>
     <div class="" style="background-color: white;">
         <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir">
             <i class="icon-play" aria-hidden="true"></i>
