--- a/index.html
+++ b/index.html
@@ -8,82 +8,84 @@
     <title>Document</title>
 </head>
 <body class="body">
-    <header class="logo">
-        <a href="/" aria-current="page">
-            <img class="logo-image" src="images/spotifu-logo.png" width="112" height="32" alt="Logo de Spotifu">
-        </a>
-    </header>
-    <nav class="menu" aria-label="Principal">
-        <ul class="menu-list">
-            <li class="menuItem is-active">
-                <a href="/" class="link" aria-current="page">
-                    <i class="icon-home" aria-hidden="true"></i>
-                    <span>Inicio</span>
-                </a>
-            </li>
-            <li class="menuItem">
-                <a href="/" class="link">
-                    <i class="icon-search" aria-hidden="true"></i>
-                    <span>Buscar</span>
-                </a>
-            </li>
-            <li class="menuItem">
-                <a href="/" class="link">
-                    <i class="icon-creditCard" aria-hidden="true"></i>
-                    <span>Premium</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <nav class="list" aria-labelledby="library-navigation">
-        <h2 class="list-title" id="library-navigation">Tu biblioteca</h2>
-        <ul class="list-content">
-            <li class="list-item">
-                <a href="#" class="link">Creada para ti</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Escuchado recientemente</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Tus Me gusta</a>
-            </li>
-        </ul>
-    </nav>
-    <nav class="list" aria-labelledby="playlist-navigation">
-        <h2 class="list-title" id="playlist-navigation">Playlist</h2>
-        <ul class="list-content">
-            <li class="list-item">
-                <a href="#" class="link">Lo mejor de lo mejor</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Naruto al 100% para programar</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Para cantar en la ducha</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Sin parar</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Naruto openings</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Dragon Ball openings</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">This is Pokémon</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Más populares de la semana</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Mis pistas de shazam</a>
-            </li>
-            <li class="list-item">
-                <a href="#" class="link">Audio Library</a>
-            </li>
-        </ul>
-    </nav>
+    <div class="sidebar">
+        <header class="logo">
+            <a href="/" aria-current="page">
+                <img class="logo-image" src="images/spotifu-logo.png" width="112" height="32" alt="Logo de Spotifu">
+            </a>
+        </header>
+        <nav class="menu" aria-label="Principal">
+            <ul class="menu-list">
+                <li class="menuItem is-active">
+                    <a href="/" class="link" aria-current="page">
+                        <i class="icon-home" aria-hidden="true"></i>
+                        <span>Inicio</span>
+                    </a>
+                </li>
+                <li class="menuItem">
+                    <a href="/" class="link">
+                        <i class="icon-search" aria-hidden="true"></i>
+                        <span>Buscar</span>
+                    </a>
+                </li>
+                <li class="menuItem">
+                    <a href="/" class="link">
+                        <i class="icon-creditCard" aria-hidden="true"></i>
+                        <span>Premium</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="list" aria-labelledby="library-navigation">
+            <h2 class="list-title" id="library-navigation">Tu biblioteca</h2>
+            <ul class="list-content">
+                <li class="list-item">
+                    <a href="#" class="link">Creada para ti</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Escuchado recientemente</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Tus Me gusta</a>
+                </li>
+            </ul>
+        </nav>
+        <nav class="list" aria-labelledby="playlist-navigation">
+            <h2 class="list-title" id="playlist-navigation">Playlist</h2>
+            <ul class="list-content">
+                <li class="list-item">
+                    <a href="#" class="link">Lo mejor de lo mejor</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Naruto al 100% para programar</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Para cantar en la ducha</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Sin parar</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Naruto openings</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Dragon Ball openings</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">This is Pokémon</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Más populares de la semana</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Mis pistas de shazam</a>
+                </li>
+                <li class="list-item">
+                    <a href="#" class="link">Audio Library</a>
+                </li>
+            </ul>
+        </nav>
+    </div>
     <div class="" style="background-color: white;">
         <button class="buttonIcon is-white" aria-label="Reproducir" title="Reproducir" width='40' height='40'>
             <i class="icon-play" aria-hidden="true"></i>
